buf fix: lines overlap making them un-clickable

--- a/src/ui/Connections/Line.module.scss
+++ b/src/ui/Connections/Line.module.scss
@@ -1,27 +1,7 @@
 .line {
-  // pointer-events: none;
+  pointer-events: none;
   position: absolute;
   left: 0;
   top: 0;
   z-index: -9999;
-}
-
-.curvedLine {
-  border: dashed 1px black;
-}
-
-.renderedLine {
-  transition: strokeDasharray 300ms;
-}
-
-.endings {
-  pointer-events: none;
-}
-
-.arrowHeadEnding {
-  transition: stroke 300ms;
-}
-
-.dotEnding {
-  transition: stroke 300ms;
 }
